<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary_back"

    android:layout_height="match_parent">

    <include
        android:id="@+id/toolBar"
        layout="@layout/tool_bar" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="90dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:textColorHint="@color/primary_green"
                app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                app:boxStrokeWidth="2dp"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:counterTextColor="@color/primary_green"
                app:cursorColor="@color/primary_green"
                app:hintTextColor="@color/primary_green"

                tools:ignore="PrivateResource">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textColor="@color/primary_green"

                    android:textSize="25sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:textColorHint="@color/primary_green"
                app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                app:boxStrokeWidth="2dp"
                app:counterEnabled="true"
                app:counterMaxLength="60"
                app:counterTextColor="@color/primary_green"
                app:cursorColor="@color/primary_green"
                app:hintTextColor="@color/primary_green"

                tools:ignore="PrivateResource">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:textColor="@color/primary_green"

                    android:textSize="25sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:textColorHint="@color/primary_green"
                app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                app:boxStrokeWidth="2dp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:counterTextColor="@color/primary_green"
                app:cursorColor="@color/primary_green"
                app:hintTextColor="@color/primary_green"

                tools:ignore="PrivateResource">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/first_name"
                    android:textColor="@color/primary_green"

                    android:textSize="25sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:textColorHint="@color/primary_green"
                app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                app:boxStrokeWidth="2dp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:counterTextColor="@color/primary_green"
                app:cursorColor="@color/primary_green"
                app:hintTextColor="@color/primary_green"

                tools:ignore="PrivateResource">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/last_name"
                    android:textColor="@color/primary_green"

                    android:textSize="25sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:textColorHint="@color/primary_green"
                app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                app:boxStrokeWidth="2dp"
                app:counterEnabled="true"
                app:counterMaxLength="60"
                app:counterTextColor="@color/primary_green"
                app:cursorColor="@color/primary_green"
                app:hintTextColor="@color/primary_green"

                tools:ignore="PrivateResource">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/primary_green"

                    android:textSize="25sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textAlignment="center"
                android:textColor="@color/primary_green"
                android:textSize="25sp" />


            <Spinner
                android:id="@+id/spinnerCurrency"
                android:layout_width="@dimen/input_width"
                android:layout_height="50dp"
                android:padding="5dp"
                android:textAlignment="center"
                android:background="@drawable/button_back"
                />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/signUpSubmit"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="30sp"
        android:text="@string/submit"
        android:background="@drawable/button_back"
        app:backgroundTint="@null"
        android:textColor="@color/primary_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>