<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary_back">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="70dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPhoneNumberLayout"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:textColorHint="@color/primary_green"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:boxStrokeWidth="2dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        android:layout_marginTop="40dp"
        app:counterTextColor="@color/primary_green"
        app:cursorColor="@color/primary_green"
        app:hintTextColor="@color/primary_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="PrivateResource">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:textColor="@color/primary_green"

            android:textSize="25sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/telegramLoginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp"
        android:visibility="invisible"
        android:text="@string/please_open_telegram_and_confirm_login"
        android:textColor="@color/primary_green"
        android:textAlignment="center"
        android:textSize="30sp"
        />


    <Button
        android:id="@+id/telegramLogInSubmit"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="30sp"
        android:text="@string/submit"
        android:background="@drawable/button_back"
        app:backgroundTint="@null"
        android:textColor="@color/primary_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/openTelegramBot"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="30sp"
        android:visibility="invisible"
        android:text="telegram"
        android:background="@drawable/button_back"
        app:backgroundTint="@null"
        android:textColor="@color/primary_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/progressBar"
        layout="@layout/fragment_loading"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="PrivateResource" />

</androidx.constraintlayout.widget.ConstraintLayout>